--- a/features/times/src/main/translations/values-ku/strings.xml
+++ b/features/times/src/main/translations/values-ku/strings.xml
@@ -19,7 +19,7 @@
   <string name="adjAngle">Li gor Aliyî (Alî/60e yên şev)</string>
   <string name="adjMidnight">Nîvê şevê</string>
   <string name="adjTime">Ji aliyê dem (1/ 7\'ê şev)</string>
-  <string name="angleBased">Alî</string>
+  <string name="angle">Alî</string>
   <string name="asr">Esir</string>
   <string name="cities">Bajarên</string>
   <string name="date">Dîrok</string>
