--- a/features/times/src/main/translations/values-nl/strings.xml
+++ b/features/times/src/main/translations/values-nl/strings.xml
@@ -20,7 +20,7 @@
   <string name="adjAngle">Hoek gebaseerd (hoek/60e nacht)</string>
   <string name="adjMidnight">Middernacht</string>
   <string name="adjTime">Tijd gebaseerd (1/7e nacht)</string>
-  <string name="angleBased">Hoek</string>
+  <string name="angle">Hoek</string>
   <string name="asr">Asr</string>
   <string name="cities">Steden</string>
   <string name="customVolume">Kies volume</string>
