--- a/features/times/src/main/translations/values-de/strings.xml
+++ b/features/times/src/main/translations/values-de/strings.xml
@@ -20,7 +20,7 @@
   <string name="adjAngle">Winkel basierend (angle/60th of night)</string>
   <string name="adjMidnight">Mitternacht</string>
   <string name="adjTime">Zeit basierend (1/7 der Nacht)</string>
-  <string name="angleBased">Winkel</string>
+  <string name="angle">Winkel</string>
   <string name="asr">Asr</string>
   <string name="calcMethod">Methode</string>
   <string name="cities">Städte</string>
