--- a/features/base/src/main/res/values/strings.xml
+++ b/features/base/src/main/res/values/strings.xml
@@ -123,4 +123,5 @@
     <string name="asr">Asr</string>
     <string name="maghrib">Maghrib</string>
     <string name="ishaa">Ishaa</string>
+    <string name="off">Off</string>
 </resources>
