--- a/features/calendar/src/main/translations/values-id/strings.xml
+++ b/features/calendar/src/main/translations/values-id/strings.xml
@@ -17,4 +17,5 @@
   -->
 <resources>
     <string name="off">Matikan</string>
+    <string name="switchHijriGreg">Mengalihkan kalender Hijriah/Masehi</string>
 </resources>
