--- a/features/missedprayers/src/main/translations/values-id/strings.xml
+++ b/features/missedprayers/src/main/translations/values-id/strings.xml
@@ -18,4 +18,5 @@
 <resources>
     <string name="fasting">Cepat</string>
     <string name="witr">Witir</string>
+    <string name="morningPrayer">Doa pagi</string>
 </resources>
