--- a/features/missedprayers/src/main/translations/values-ku/strings.xml
+++ b/features/missedprayers/src/main/translations/values-ku/strings.xml
@@ -18,4 +18,5 @@
 <resources>
     <string name="fasting">Rojî</string>
     <string name="witr">Fitr</string>
+    <string name="morningPrayer">Nimêja sibehê</string>
 </resources>
